--- a/index.html
+++ b/index.html
@@ -20,46 +20,7 @@
             <input type="text" name="" id="search" class="search" placeholder="Search...">
         </form>
     </header>
-    <main id="main">
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1486693128850-a77436e7ba3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="">
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="red">3.8</span>
-            </div>
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos delectus ad libero vel nam dolores perspiciatis
-                doloremque nulla sed quo non pariatur at sequi, minus dolorem repudiandae, maxime autem asperiores.
-            </div>
-        </div>
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1486693128850-a77436e7ba3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="">
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="orange">5.8</span>
-            </div>
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos delectus ad libero vel nam dolores perspiciatis
-                doloremque nulla sed quo non pariatur at sequi, minus dolorem repudiandae, maxime autem asperiores.
-            </div>
-        </div>
-        <div class="movie">
-            <img src="https://images.unsplash.com/photo-1486693128850-a77436e7ba3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80" alt="">
-            <div class="movie-info">
-                <h3>Movie Title</h3>
-                <span class="green">9.8</span>
-            </div>
-            <div class="overview">
-                <h3>Overview</h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos delectus ad libero vel nam dolores perspiciatis
-                doloremque nulla sed quo non pariatur at sequi, minus dolorem repudiandae, maxime autem asperiores.
-            </div>
-        </div>
-
-
-    </main>
+    <main id="main"></main>
     <script src="./app.js"></script>
 </body>
 
